<resources>
    <string name="app_name">PeriodFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtAppName">Period Flow</string>
    <string name="txtGoWith">Go With The Flow</string>
    <string name="txtSignIn">Sign In</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtAlreadyAccount">already have an account?  </string>
    <string name="txtHello">Hello Beautiful,</string>
    <string name="txtEnterDetails">Enter your information below or login with Google account</string>
    <string name="txtContinueGoogle">continue with google</string>
    <string name="txtCreateAccount">Create Account</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="txtWeAreHappy">We are happy to see you here! Let us track your period.</string>
    <string name="txtChooseLang">Please, choose the language</string>
    <string name="next">Next</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="txtTellUs">Tell us about your period cycle:</string>
    <string name="txtPeriodLength">Period length (days)</string>
    <string name="txtCycleLength">Cycle length (days)</string>
    <string name="txtStartDate">Start date of last period</string>
    <string name="skip">Skip</string>
    <string name="select_date">Select date</string>
    <string name="back">Back</string>
    <string name="txtPeriodDates">Please insert your last period dates:</string>
    <string name="txtBirthdaySelect">Please, select your birth date:</string>
    <string name="txtAnalyzePrognose">It will help us to better analyze your prognoze</string>
    <string name="txtYourName">Please, tell us your name:</string>
    <string name="txtWhichPrognoze">Which prognoses do you want to use?</string>
    <string name="period">Period</string>
    <string name="txtShowPossible">Shows a possible future period</string>
    <string name="fertility">Fertility</string>
    <string name="txtShowPossibleFert">Shows possible future fertility windows</string>
    <string name="pms">PMS</string>
    <string name="txtPossiblePms">Shows possible future PMS</string>
    <string name="txtPleaseTellName">Please, tell us your name:</string>
    <string name="txtHowDoYouCall">How do you want VelvetFlow call you?</string>
    <string name="your_preference">Your preference...</string>
    <string name="period_in">Period in</string>
    <string name="txt2">2</string>
    <string name="days">days</string>
    <string name="long_period">Long Period</string>
    <string name="average_period">Average period</string>
    <string name="average_cycle">Average cycle</string>
    <string name="graph_amp_reports"><![CDATA[Graph & Reports]]></string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cycle_length_days">Cycle Length (Days)</string>
    <string name="you_re_healthy">You’re Healthy</string>
    <string name="cycle_report">Cycle Report</string>
    <string name="edit">Edit</string>
    <string name="my_cycles">My cycles</string>
    <string name="add_weight">Add weight</string>
    <string name="add_height">Add Height</string>
    <string name="prognoses">Prognoses</string>
    <string name="period_fertility_pms">Period, Fertility, PMS</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="activity_title_view">Calendar View Sample</string>
    <string name="example_1_title">Example 1</string>
    <string name="example_1_subtitle">Multiple selection, paged horizontal scrolling, shows the \"EndOfRow\" implementation of OutDateStyle property.</string>
    <string name="example_2_title">Example 2</string>
    <string name="example_2_subtitle">Month header view, single selection, vertical scrolling, hides in and out dates.</string>
    <string name="example_3_title">Example 3</string>
    <string name="example_3_subtitle">Event style implementation, day labels as header view, single selection, month scroll listener. Similar to what is in the Google Calendar app.</string>
    <string name="example_4_title">Example 4</string>
    <string name="example_4_subtitle">Continuous selection within one month and across multiple months, dates older than the current day are disabled. Similar to what is in the Airbnb app.</string>
    <string name="example_5_title">Example 5</string>
    <string name="example_5_subtitle">Single selection, programmatic calendar scrolling, generates six rows for all months showing \"EndOfGrid\" implementation of OutDateStyle property. A flight schedule calendar.</string>
    <string name="example_6_title">Example 6</string>
    <string name="example_6_subtitle">Custom date width and height, custom month view, item decoration on the CalendarView, continuous horizontal scrolling style.</string>
    <string name="example_7_title">Example 7</string>
    <string name="example_7_subtitle">Week calendar with single selection, paged scroll and visible item observation.</string>
    <string name="example_8_title">Example 8</string>
    <string name="example_8_subtitle">Fullscreen calendar, header and footer views, paged horizontal scrolling, shows the \"Rectangle\" DaySize option.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="clear">Clear</string>
    <string name="week_mode">Week mode</string>
    <string name="example_8_zero_selection">No selections in this month</string>
    <plurals name="example_8_selection">
        <item quantity="zero">@string/example_8_zero_selection</item>
        <item quantity="one">%1$d selection in this month</item>
        <item quantity="other">%1$d selections in this month</item>
    </plurals>
</resources>